More FindBugs fixes.