@@ -73,7 +73,7 @@ public class GhprbUpstreamStatusListener extends RunListener<AbstractBuild<?, ?>
                 envVars.get("ghprbStatusUrl"),
                 envVars.get("ghprbTriggeredStatus"),
                 envVars.get("ghprbStartedStatus"),
-                new Boolean(envVars.get("ghprbAddTestResults")),
+                Boolean.valueOf(envVars.get("ghprbAddTestResults")),
                 statusMessages
         );
     }
